couple of format fixes, fixed text align

--- a/view/style.css
+++ b/view/style.css
@@ -13,3 +13,7 @@
 .card-body {
     background-color: rgb(240, 240, 240);
 }
+
+.card-title {
+    text-align: center;
+}
